<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity"
  android:orientation="vertical"
  android:gravity="center">

    <Button
      android:id="@+id/button_charge_intent"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/charge_intent_button"
      android:layout_gravity="center"/>

    <Button
      android:id="@+id/button_charge_uri"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/charge_uri_button"
      android:layout_gravity="center"/>

    <ScrollView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical">

     <TextView
       android:id="@+id/result"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="18sp"
       android:padding="8dp"
       tools:text="@string/result_placeholder"
       android:layout_gravity="center"/>

      <TextView
        android:id="@+id/result_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="8dp"
        tools:text="@string/message_placeholder"
        android:layout_gravity="center"/>

      <TextView
        android:id="@+id/tx_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="8dp"
        tools:text="@string/transaction_code_placeholder"
        android:layout_gravity="center"/>

      <TextView
        android:id="@+id/receipt_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="8dp"
        tools:text="@string/receipt_sent_placeholder"/>

    </LinearLayout>
  </ScrollView>
</LinearLayout>
